Got interests pushed to the client to display in the UI of the application. Also fixed some layout issues

--- a/FastFootShoesRetailApp/src/main/resources/static/css/main.css
+++ b/FastFootShoesRetailApp/src/main/resources/static/css/main.css
@@ -298,3 +298,8 @@ textarea {
         page-break-after: avoid;
     }
 }
+
+.row {
+	margin-left: 0;
+	margin-right: 0;
+}
